# pythonProjectPoetry

./: pyproject.toml
pages/: __init__.py  base_page.py  chemtalk_page.py  chemtalk_page_locators.py
resources/: constants.py
tests/: conftest.py  test_chemtalk_page.py
