[tool.poetry]
name = "pythonprojectpoetry"
version = "0.1.0"
description = ""
authors = ["Hiranya_28 <hiranyamalshani28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
pytest = "^8.3.3"
driver = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
